# hse-3-course

./: .gitignore
Research Seminar/: lab1_signals_variant6_full_executed.ipynb  lab2_filters_variant6_executed.html  lab2_filters_variant6_executed.ipynb  variant.txt
Research Seminar/Mathematical-modeling-of-stock-markets/: README.md
Research Seminar/Mathematical-modeling-of-stock-markets/data/: Индия_2025.xlsx  Индия_2026.xlsx  Фондовый_рынок_Индии.xlsx
Research Seminar/Mathematical-modeling-of-stock-markets/lab1/: 23KNT_NIS_Home_Work_1.doc  Vlasov_Kim_23CST6_India_2023_hw1.ipynb
Research Seminar/Mathematical-modeling-of-stock-markets/lab2/: Vlasov_kim_23CST6_India_2023_hw2.ipynb
Research Seminar/Mathematical-modeling-of-stock-markets/portfolio_contest/: 23KNT_Contest_otchet.docx  Vlasov_Artyom_23CST6_Contest.ipynb  Отчёт_Портфель_Власов_Артём_23КНТ6.docx
compilers/clang-ast-plugin-lab1/: CMakeLists.txt  README.md
compilers/clang-ast-plugin-lab1/src/: FunctionInfoPlugin.cpp
compilers/clang-ast-plugin-lab1/test/: sample.cpp
optimizations/: A_100.csv  index.ipynb  index.py
requirements/: Project_Template_HSE_updated.docx
